[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/theme_data/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://gui/scripts/level_select_gui.gd" type="Script" id=2]

[node name="LevelSelectGUI" type="Control"]
modulate = Color( 1.13, 1.13, 1.13, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 100.0
margin_bottom = 18.0
text = "LEVEL SELECT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtn" type="Button" parent="."]
margin_left = 12.0
margin_top = 123.0
margin_right = 52.0
margin_bottom = 135.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonusBtn" type="Button" parent="."]
margin_left = 202.0
margin_top = 123.0
margin_right = 244.0
margin_bottom = 135.0
text = "bonus"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 82.0
margin_top = 26.0
margin_right = 174.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutBtn" type="Button" parent="VBoxContainer"]
margin_right = 92.0
margin_bottom = 12.0
text = "Tutorial"

[node name="Lv1Btn" type="Button" parent="VBoxContainer"]
margin_top = 16.0
margin_right = 92.0
margin_bottom = 28.0
text = "Level 1"

[node name="Lv2Btn" type="Button" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 92.0
margin_bottom = 44.0
text = "Level 2"

[node name="Lv3Btn" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 92.0
margin_bottom = 60.0
text = "Level 3"

[node name="Lv4Btn" type="Button" parent="VBoxContainer"]
margin_top = 64.0
margin_right = 92.0
margin_bottom = 76.0
text = "Level 4"

[node name="Lv5Btn" type="Button" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 92.0
margin_bottom = 92.0
text = "Level 5"

[connection signal="button_down" from="BackBtn" to="." method="_on_BackBtn_button_down"]
[connection signal="button_up" from="BackBtn" to="." method="_on_BackBtn_button_up"]
[connection signal="button_down" from="BonusBtn" to="." method="_on_BonusBtn_button_down"]
[connection signal="button_up" from="BonusBtn" to="." method="_on_BonusBtn_button_up"]
[connection signal="button_down" from="VBoxContainer/TutBtn" to="." method="_on_TutBtn_button_down"]
[connection signal="button_up" from="VBoxContainer/TutBtn" to="." method="_on_TutBtn_button_up"]
[connection signal="button_down" from="VBoxContainer/Lv1Btn" to="." method="_on_Lv1Btn_button_down"]
[connection signal="button_up" from="VBoxContainer/Lv1Btn" to="." method="_on_Lv1Btn_button_up"]
[connection signal="button_down" from="VBoxContainer/Lv2Btn" to="." method="_on_Lv2Btn_button_down"]
[connection signal="button_up" from="VBoxContainer/Lv2Btn" to="." method="_on_Lv2Btn_button_up"]
[connection signal="button_down" from="VBoxContainer/Lv3Btn" to="." method="_on_Lv3Btn_button_down"]
[connection signal="button_up" from="VBoxContainer/Lv3Btn" to="." method="_on_Lv3Btn_button_up"]
[connection signal="button_down" from="VBoxContainer/Lv4Btn" to="." method="_on_Lv4Btn_button_down"]
[connection signal="button_up" from="VBoxContainer/Lv4Btn" to="." method="_on_Lv4Btn_button_up"]
[connection signal="button_down" from="VBoxContainer/Lv5Btn" to="." method="_on_Lv5Btn_button_down"]
[connection signal="button_up" from="VBoxContainer/Lv5Btn" to="." method="_on_Lv5Btn_button_up"]
